<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="DSV2_ArmPosition" Id="{3dea63be-fb20-47f4-bbdf-ad1b0c901012}">
    <Declaration><![CDATA[TYPE DSV2_ArmPosition :
STRUCT

	AR3sbTargetPosSt : ARRAY [0..3, 0..iStnQty, 0..12] OF BOOL;
	AR3sbPositionCfm : ARRAY [0..3, 0..iStnQty, 0..12] OF BOOL;
	AR3sb2ndSpdEn : ARRAY [0..3, 0..iStnQty, 0..12] OF BOOL;

	AR3slrPosition : ARRAY [0..3, 0..iStnQty, 0..20] OF LREAL;

(*
	lr2ndSpdRange : LREAL;
	lrPosCfmTolerance : LREAL;
*)

(*Array Declaration -->

Stage 1 --> (0..3) 
------------------------
1=Stn
2=Loading
3=Unloading


Stage 2 --> (0..iStnQty) 
------------------------
No = Station No (Example: 8 = Station 8)



Stage 3 --> (0..12) 
------------------------
1=Vert - Up
2=Vert - SlowPull / Slanted
3=Vert - Regular / Mid Top
4=Vert - AgiUp
5=Vert - AgiDown
6=Vert - Down
7=Horz - Unhook 
8=Horz -  Hook
9=Horz -  Slanted Left
10=Horz - Slanted Right
11=Lifter - Up 
12=Lifter - down 
13=Reserved
14=Reserved
15=Reserved
16=Reserved
17=Reserved
18=Reserved
19=Reserved
20=Reserved

*)

END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>